--- a/index.html
+++ b/index.html
@@ -40,64 +40,66 @@
                 </div>
             </div>
         </nav>
-        <div class="segmenet offer col-md-12 responsive-image">
-            <h2>OFERTA</h2> <img class="blue-line" src="images/blue-line.png">
-            <div class="offer-content row">
-                <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
-                    <div class=""> <img src="http://via.placeholder.com/200x150" class="img-fluid" alt="Responsive image">
-                        <div class="offer-content-segment-title">TEST</div>
+        <div class="row">
+            <div class="segmenet offer col-xs-12 col-sm-12 col-md-12">
+                <h2>OFERTA</h2> <img class="blue-line" src="images/blue-line.png">
+                <div class="offer-content row">
+                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
+                        <div class="offer-content-segment-1">
+                            <div class="offer-content-segment-title">TEKST</div>
+                        </div>
                     </div>
-                </div>
-                <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
-                    <div class=""> <img src="http://via.placeholder.com/200x150" class="img-fluid" alt="Responsive image">
-                        <div class="offer-content-segment-title">TEKST</div>
+                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
+                        <div class="offer-content-segment-1">
+                            <div class="offer-content-segment-title">TEKST</div>
+                        </div>
                     </div>
-                </div>
-                <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
-                    <div class=""> <img src="http://via.placeholder.com/200x150" class="img-fluid" alt="Responsive image">
-                        <div class="offer-content-segment-title">TEKST</div>
+                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
+                        <div class="offer-content-segment-1">
+                            <div class="offer-content-segment-title">TEKST</div>
+                        </div>
                     </div>
-                </div>
-                <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
-                    <div class=""> <img src="http://via.placeholder.com/200x150" class="img-fluid" alt="Responsive image">
-                        <div class="offer-content-segment-title">TEKST</div>
+                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
+                        <div class="offer-content-segment-1">
+                            <div class="offer-content-segment-title">TEKST</div>
+                        </div>
                     </div>
-                </div>
-                <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
-                    <div class=""> <img src="http://via.placeholder.com/200x150" class="img-fluid" alt="Responsive image">
-                        <div class="offer-content-segment-title">TEKST</div>
+                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
+                        <div class="offer-content-segment-1">
+                            <div class="offer-content-segment-title">TEKST</div>
+                        </div>
                     </div>
-                </div>
-                <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
-                    <div class=""> <img src=" http://via.placeholder.com/200x150 " class="img-fluid " alt="Responsive image ">
-                        <div class="offer-content-segment-title ">TEKST</div>
+                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
+                        <div class="offer-content-segment-1">
+                            <div class="offer-content-segment-title ">TEKST</div>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="segmenet about-company col-xs-12 col-sm-12 col-md-12">
+                <br>
+                <br>
+                <h2>O FIRMIE</h2> <img class="blue-line " src="images/white-line.png ">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br> dadsa dadsa dadsa dadsa dadsa
+                <br>
+                <br>
+                <br>
+                <br>
+                <br> dadsa dadsa dadsa dadsa dadsa
+                <br>
+                <br>
+                <br>
+                <br>
+                <br> dadsa dadsa </div>
+            <div class="segmenet contact col-xs-12 col-sm-12 col-md-12 ">
+                <br>
+                <br>
+                <h2>KONTAKT</h2> <img class="blue-line " src="images/white-line.png "> dadas </div>
         </div>
-        <div class="segmenet about-company col-md-12 ">
-            <br>
-            <br>
-            <h2>O FIRMIE</h2> <img class="blue-line " src="images/white-line.png ">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br> dadsa dadsa dadsa dadsa dadsa
-            <br>
-            <br>
-            <br>
-            <br>
-            <br> dadsa dadsa dadsa dadsa dadsa
-            <br>
-            <br>
-            <br>
-            <br>
-            <br> dadsa dadsa </div>
-        <div class="segmenet contact col-md-12 ">
-            <br>
-            <br>
-            <h2>KONTAKT</h2> <img class="blue-line " src="images/white-line.png "> dadas </div>
     </div>
     <!-- /.container -->
     <!-- Bootstrap core JavaScript
