--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/flag-icon.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- Custom styles for this template -->
 </head>
 
@@ -77,24 +78,25 @@
                 </div>
             </div>
             <div class="segmenet about-company col-xs-12 col-sm-12 col-md-12">
-                <br>
-                <br>
                 <h2>O FIRMIE</h2> <img class="blue-line " src="images/white-line.png ">
-                <br>
-                <br>
-                <br>
-                <br>
-                <br> dadsa dadsa dadsa dadsa dadsa
-                <br>
-                <br>
-                <br>
-                <br>
-                <br> dadsa dadsa dadsa dadsa dadsa
-                <br>
-                <br>
-                <br>
-                <br>
-                <br> dadsa dadsa </div>
+                <div class="about-company-segment">
+                    <p class="title">PD Instruments</p>
+                    <br>
+                    <p> <b>
+                        Firma PD Instruments Patrick Dzierżawa działa na<br>
+                        rynku Polskim od 2010 roku.
+                        </b> </p>
+                    <br>
+                    <br>
+                    <p> Początki firmy sięgają lat dziewięćdziesiątych kiedy
+                        <br> to Hubert Dzierżawa rozpoczął pracę nad konstrukcją
+                        <br> stapiarki gazowej w HD Elektronik, eksportując ją z
+                        <br> powodzeniem na cały świat. </p>
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-primary btn-lg outline">Dowiedz się więcej</button>
+                </div>
+            </div>
             <div class="segmenet contact col-xs-12 col-sm-12 col-md-12 ">
                 <br>
                 <br>
