--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/flag-icon.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Encode+Sans" rel="stylesheet">
     <!-- Custom styles for this template -->
 </head>
 
@@ -31,7 +32,7 @@
                         <li> <a class="menu-content" href="#offer">O FIRMIE</a> </li>
                         <li> <a class="menu-content" href="#offer">KONTAKT</a> </li>
                         <li>
-                            <div class="languages nav navbar-nav navbar-right">
+                            <div class="languages">
                                 <a href="#"> <span class="flag-icon flag-icon-de"></span> </a>
                                 <a href="#" class="active"> <span class="flag-icon flag-icon-pl"></span> </a>
                                 <a href="#"> <span class="flag-icon flag-icon-gb"></span> </a>
@@ -46,33 +47,32 @@
                 <h2>OFERTA</h2> <img class="blue-line" src="images/blue-line.png">
                 <div class="offer-content row">
                     <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
+                        <div class="offer-content-segment-1 "> </div>
+                        <p class="title">Technologia topienia</p>
+                    </div>
+                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
                         <div class="offer-content-segment-1">
-                            <div class="offer-content-segment-title">TEKST</div>
+                            <p class="title">Technologia prasowania</p>
                         </div>
                     </div>
                     <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
                         <div class="offer-content-segment-1">
-                            <div class="offer-content-segment-title">TEKST</div>
+                            <p class="title">Materiały użytkowe</p>
                         </div>
                     </div>
                     <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
                         <div class="offer-content-segment-1">
-                            <div class="offer-content-segment-title">TEKST</div>
+                            <p class="title">Analiza cieczy</p>
                         </div>
                     </div>
                     <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
                         <div class="offer-content-segment-1">
-                            <div class="offer-content-segment-title">TEKST</div>
+                            <p class="title">Wzorce i materiały referencyjne</p>
                         </div>
                     </div>
                     <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
                         <div class="offer-content-segment-1">
-                            <div class="offer-content-segment-title">TEKST</div>
-                        </div>
-                    </div>
-                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
-                        <div class="offer-content-segment-1">
-                            <div class="offer-content-segment-title ">TEKST</div>
+                            <p class="title ">Serwis</p>
                         </div>
                     </div>
                 </div>
@@ -86,13 +86,10 @@
                         Firma PD Instruments Patrick Dzierżawa działa na<br>
                         rynku Polskim od 2010 roku.
                         </b> </p>
-                    <br>
-                    <br>
                     <p> Początki firmy sięgają lat dziewięćdziesiątych kiedy
                         <br> to Hubert Dzierżawa rozpoczął pracę nad konstrukcją
                         <br> stapiarki gazowej w HD Elektronik, eksportując ją z
                         <br> powodzeniem na cały świat. </p>
-                    <br>
                     <br>
                     <button type="button" class="btn btn-primary btn-lg outline">Dowiedz się więcej</button>
                 </div>
