--- a/index.html
+++ b/index.html
@@ -45,34 +45,36 @@
         <div class="row">
             <div class="segmenet offer col-xs-12 col-sm-12 col-md-12">
                 <h2>OFERTA</h2> <img class="blue-line" src="images/blue-line.png">
-                <div class="offer-content row">
-                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
-                        <div class="offer-content-segment-1 "> </div>
-                        <p class="title">Technologia topienia</p>
-                    </div>
-                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
-                        <div class="offer-content-segment-1">
-                            <p class="title">Technologia prasowania</p>
+                <div class="offer-content">
+                    <div class="row">
+                        <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
+                            <div class="offer-content-segment-1 "> </div>
+                            <p class="title">Technologia topienia</p>
                         </div>
-                    </div>
-                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
-                        <div class="offer-content-segment-1">
-                            <p class="title">Materiały użytkowe</p>
+                        <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
+                            <div class="offer-content-segment-1">
+                                <p class="title">Technologia prasowania</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
-                        <div class="offer-content-segment-1">
-                            <p class="title">Analiza cieczy</p>
+                        <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
+                            <div class="offer-content-segment-1">
+                                <p class="title">Materiały użytkowe</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
-                        <div class="offer-content-segment-1">
-                            <p class="title">Wzorce i materiały referencyjne</p>
+                        <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
+                            <div class="offer-content-segment-1">
+                                <p class="title">Analiza cieczy</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
-                        <div class="offer-content-segment-1">
-                            <p class="title ">Serwis</p>
+                        <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
+                            <div class="offer-content-segment-1">
+                                <p class="title">Wzorce i materiały referencyjne</p>
+                            </div>
+                        </div>
+                        <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
+                            <div class="offer-content-segment-1">
+                                <p class="title ">Serwis</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -97,7 +99,18 @@
             <div class="segmenet contact col-xs-12 col-sm-12 col-md-12 ">
                 <br>
                 <br>
-                <h2>KONTAKT</h2> <img class="blue-line " src="images/white-line.png "> dadas </div>
+                <h2>KONTAKT</h2> <img class="blue-line " src="images/white-line.png ">
+                <div class="contact-segment row">
+                    <div class="contact-segment-form form-group col-md-4">
+                        <p class="title">Napisz do nas</p>
+                        <p>Imię i nazwisko</p>
+                        <input type="text" class="form-control" id="name-surname" /> </div>
+                    <div class="contact-segment-info col-md-6 col-md-offset-2 row">
+                        <div class="contact-segment-info-content col-md-6">TEST</div>
+                        <div class="contact-segment-info-content col-md-6">TEST</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- /.container -->
