--- a/index.html
+++ b/index.html
@@ -104,10 +104,15 @@
                     <div class="contact-segment-form form-group col-md-4">
                         <p class="title">Napisz do nas</p>
                         <p>Imię i nazwisko</p>
-                        <input type="text" class="form-control" id="name-surname" /> </div>
-                    <div class="contact-segment-info col-md-6 col-md-offset-2 row">
-                        <div class="contact-segment-info-content col-md-6">TEST</div>
-                        <div class="contact-segment-info-content col-md-6">TEST</div>
+                        <input type="text" class="form-control" id="name-surname" placeholder="Imię i nazwisko" />
+                        <p>Adres e-mail</p>
+                        <input type="text" class="form-control" id="email" placeholder="adres@domena.com" />
+                        <p>Treść wiadomości</p>
+                        <textarea rows="8" class="form-control " id="contents " placeholder="Napisz do nas kilka słów "></textarea>
+                    </div>
+                    <div class="contact-segment-info col-md-6 col-md-offset-2 row ">
+                        <div class="contact-segment-info-content col-md-6 ">TEST</div>
+                        <div class="contact-segment-info-content col-md-6 ">TEST</div>
                     </div>
                 </div>
             </div>
