index html contacts

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </nav>
         <div class="row">
             <div class="segmenet offer col-xs-12 col-sm-12 col-md-12">
-                <h2>OFERTA</h2> <img class="blue-line" src="images/blue-line.png">
+                <h2 class="line-separator">OFERTA</h2> <img class="blue-line" src="images/blue-line.png">
                 <div class="offer-content">
                     <div class="row">
                         <div class="offer-content-segment col-xs-12 col-sm-6 col-md-4">
@@ -111,8 +111,34 @@
                         <textarea rows="8" class="form-control " id="contents " placeholder="Napisz do nas kilka słów "></textarea>
                     </div>
                     <div class="contact-segment-info col-md-6 col-md-offset-2 row ">
-                        <div class="contact-segment-info-content col-md-6 ">TEST</div>
-                        <div class="contact-segment-info-content col-md-6 ">TEST</div>
+                        <div class="contact-segment-info-content col-md-6 ">
+                            <div class="info-content">
+                                <p class="info-content-title"><b>Stefania Szpunar</b>
+                                    <br>Prezes Zarządu</p><a href="tel:+48 32 230 30 28">+48 32 230 30 28 wew: 21</a>
+                                <br> <a href="mailto:sszpunar@pdinstruments.com">sszpunar@pdinstruments.com</a> </div>
+                            <div class="info-content">
+                                <p class="info-content-title"><b>Anna Kulczycka</b>
+                                    <br>Dyrektor d/s sprzedaży</p><a href="tel:+48 32 230 30 28">+48 32 230 30 28 wew: 22</a>
+                                <br> <a href="mailto:akulczycka@pdinstruments.com">akulczycka@pdinstruments.com</a> </div>
+                            <div class="info-content">
+                                <p class="info-content-title"><b>Monika Woznieczek</b>
+                                    <br>Kierownik labolatorium</p><a href="tel:+48 32 230 30 28">+48 32 230 30 28 wew: 23</a>
+                                <br> <a href="mailto:mwoznieczek@pdinstruments.com">mwoznieczek@pdinstruments.com</a> </div>
+                        </div>
+                        <div class="contact-segment-info-content col-md-6 ">
+                            <div class="info-content">
+                                <p class="info-content-title"><b>Patrick Dzierzawa</b>
+                                    <br>Prokurent</p><a href="tel:+49 (0)172 260 36 12"> +49 (0)172 260 36 12</a>
+                                <br> <a href="mailto:pdzierzawa@pdinstruments.com">pdzierzawa@pdinstruments.com</a> </div>
+                            <div class="info-content">
+                                <p class="info-content-title"><b>Justyna Bielak</b>
+                                    <br>Dyrektor d/s jakości</p><a href="tel:+48 32 230 30 28">+48 32 230 30 28 wew: 23</a>
+                                <br> <a href="mailto:jbielak@pdinstruments.com">jbielak@pdinstruments.com</a> </div>
+                            <div class="info-content">
+                                <p class="info-content-title"><b>Patryk Filipek</b>
+                                    <br>Serwis</p><a href="tel:+48 32 230 30 28">+48 32 230 30 28 wew: 30</a>
+                                <br><a href="mailto:pfilipek@pdinstruments.com">pfilipek@pdinstruments.com</a> </div>
+                        </div>
                     </div>
                 </div>
             </div>
