index html contacts

--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
             </div>
             <div class="segment foot col-xs-12 col-sm-12 col-md-12">
                 <div class="foot-segment row">
-                    <div class="col-md-1 social-media">D</div>
+                    <div class="col-md-1 social-media">
+                        <a href="https://www.facebook.com/PDInstruments/"> <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> </a> <a href="https://www.linkedin.com/company/7034423/"><i class="fa fa-linkedin-square fa-2x" aria-hidden="false"></i></a></div>
                     <div class="col-md-2 social-media col-md-offset-1">U</div>
                     <div class="col-md-2 social-media col-md-offset-1 ">P</div>
                     <div class="col-md-2 social-media">A</div>
