--- a/index.html
+++ b/index.html
@@ -110,34 +110,32 @@
                         <p>Treść wiadomości</p>
                         <textarea rows="8" class="form-control " id="contents " placeholder="Napisz do nas kilka słów "></textarea>
                     </div>
-                    <div class="contact-segment-info col-md-6 col-md-offset-2 row ">
-                        <div class="contact-segment-info-content col-md-6 ">
-                            <div class="info-content">
+                    <div class="contact-segment-info col-md-8">
+                        <div class="contact-segment info-content col-md-12 row">
+                            <div class="info-content col-md-6 col-sm-6">
                                 <p class="info-content-title"><b>Stefania Szpunar</b>
-                                    <br>Prezes Zarządu</p><a href="tel:+48 32 230 30 28">+48 32 230 30 28 wew: 21</a>
-                                <br> <a href="mailto:sszpunar@pdinstruments.com">sszpunar@pdinstruments.com</a> </div>
-                            <div class="info-content">
+                                    <br>Prezes Zarządu</p><a href="tel:+48 32 230 30 28"><i class="fa fa-phone" aria-hidden="true"></i> +48 32 230 30 28 wew: 21</a>
+                                <br><a href="mailto:sszpunar@pdinstruments.com"><i class="fa fa-envelope" aria-hidden="true"></i> sszpunar@pdinstruments.com</a> </div>
+                            <div class="info-content col-md-6 col-sm-6">
                                 <p class="info-content-title"><b>Anna Kulczycka</b>
-                                    <br>Dyrektor d/s sprzedaży</p><a href="tel:+48 32 230 30 28">+48 32 230 30 28 wew: 22</a>
-                                <br> <a href="mailto:akulczycka@pdinstruments.com">akulczycka@pdinstruments.com</a> </div>
-                            <div class="info-content">
+                                    <br>Dyrektor d/s sprzedaży</p><a href="tel:+48 32 230 30 28"><i class="fa fa-phone" aria-hidden="true"></i> +48 32 230 30 28 wew: 22</a>
+                                <br> <a href="mailto:akulczycka@pdinstruments.com"><i class="fa fa-envelope" aria-hidden="true"></i> akulczycka@pdinstruments.com</a> </div>
+                            <div class="info-content col-md-6 col-sm-6">
                                 <p class="info-content-title"><b>Monika Woznieczek</b>
-                                    <br>Kierownik labolatorium</p><a href="tel:+48 32 230 30 28">+48 32 230 30 28 wew: 23</a>
-                                <br> <a href="mailto:mwoznieczek@pdinstruments.com">mwoznieczek@pdinstruments.com</a> </div>
-                        </div>
-                        <div class="contact-segment-info-content col-md-6 ">
-                            <div class="info-content">
+                                    <br>Kierownik labolatorium</p><a href="tel:+48 32 230 30 28"><i class="fa fa-phone" aria-hidden="true"></i> +48 32 230 30 28 wew: 23</a>
+                                <br> <a href="mailto:mwoznieczek@pdinstruments.com"><i class="fa fa-envelope" aria-hidden="true"></i> mwoznieczek@pdinstruments.com</a> </div>
+                            <div class="info-content col-md-6 col-sm-6">
                                 <p class="info-content-title"><b>Patrick Dzierzawa</b>
-                                    <br>Prokurent</p><a href="tel:+49 (0)172 260 36 12"> +49 (0)172 260 36 12</a>
-                                <br> <a href="mailto:pdzierzawa@pdinstruments.com">pdzierzawa@pdinstruments.com</a> </div>
-                            <div class="info-content">
+                                    <br>Prokurent</p><a href="tel:+49 (0)172 260 36 12"><i class="fa fa-phone" aria-hidden="true"></i> +49 (0)172 260 36 12</a>
+                                <br> <a href="mailto:pdzierzawa@pdinstruments.com"><i class="fa fa-envelope" aria-hidden="true"></i> pdzierzawa@pdinstruments.com</a> </div>
+                            <div class="info-content col-md-6 col-sm-6">
                                 <p class="info-content-title"><b>Justyna Bielak</b>
-                                    <br>Dyrektor d/s jakości</p><a href="tel:+48 32 230 30 28">+48 32 230 30 28 wew: 23</a>
-                                <br> <a href="mailto:jbielak@pdinstruments.com">jbielak@pdinstruments.com</a> </div>
-                            <div class="info-content">
+                                    <br>Dyrektor d/s jakości</p><a href="tel:+48 32 230 30 28"><i class="fa fa-phone" aria-hidden="true"></i> +48 32 230 30 28 wew: 23</a>
+                                <br> <a href="mailto:jbielak@pdinstruments.com"><i class="fa fa-envelope" aria-hidden="true"></i> jbielak@pdinstruments.com</a> </div>
+                            <div class="info-content col-md-6 col-sm-6">
                                 <p class="info-content-title"><b>Patryk Filipek</b>
-                                    <br>Serwis</p><a href="tel:+48 32 230 30 28">+48 32 230 30 28 wew: 30</a>
-                                <br><a href="mailto:pfilipek@pdinstruments.com">pfilipek@pdinstruments.com</a> </div>
+                                    <br>Serwis</p><a href="tel:+48 32 230 30 28"><i class="fa fa-phone" aria-hidden="true"></i> +48 32 230 30 28 wew: 30</a>
+                                <br><a href="mailto:pfilipek@pdinstruments.com"><i class="fa fa-envelope" aria-hidden="true"></i> pfilipek@pdinstruments.com</a> </div>
                         </div>
                     </div>
                 </div>
@@ -145,8 +143,8 @@
             <div class="segment foot col-xs-12 col-sm-12 col-md-12">
                 <div class="foot-segment row">
                     <div class="col-md-1 social-media">
-                        <a href="https://www.facebook.com/PDInstruments/"> <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> </a> <a href="https://www.linkedin.com/company/7034423/"><i class="fa fa-linkedin-square fa-2x" aria-hidden="false"></i></a></div>
-                    <div class="col-md-2 social-media">U</div>
+                        <a href="https://www.facebook.com/PDInstruments/"> <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> </a> <a href="https://www.linkedin.com/company/10971014/"><i class="fa fa-linkedin-square fa-2x" aria-hidden="false"></i></a></div>
+                    <div class="col-md-2 social-media"><i class="fa fa-phone" aria-hidden="true"></i></div>
                     <div class="col-md-2 social-media col-md-offset-1 ">P</div>
                     <div class="col-md-2 social-media">A</div>
                     <div class="col-md-3 map">
@@ -158,29 +156,31 @@
                                     max-width: none!important;
                                     background: none!important
                                 }
+
                             </style>
                         </div>
                         <script type='text/javascript'>
                             function init_map() {
                                 var myOptions = {
-                                    zoom: 16
-                                    , center: new google.maps.LatLng(50.454234, 18.524001999999996)
-                                    , mapTypeId: google.maps.MapTypeId.ROADMAP
+                                    zoom: 16,
+                                    center: new google.maps.LatLng(50.454234, 18.524001999999996),
+                                    mapTypeId: google.maps.MapTypeId.ROADMAP
                                 };
                                 map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);
                                 marker = new google.maps.Marker({
-                                    map: map
-                                    , position: new google.maps.LatLng(50.454234, 18.524001999999996)
+                                    map: map,
+                                    position: new google.maps.LatLng(50.454234, 18.524001999999996)
                                 });
                                 infowindow = new google.maps.InfoWindow({
-                                    content: '<strong>PD Instruments</strong><br>ul. Tarnogórska 6, Toszek, Polska<br>'
+                                    content: '<b>PD Instruments</b><br>ul. Tarnogórska 6, Toszek, Polska<br>'
                                 });
-                                google.maps.event.addListener(marker, 'click', function () {
+                                google.maps.event.addListener(marker, 'click', function() {
                                     infowindow.open(map, marker);
                                 });
                                 infowindow.open(map, marker);
                             }
                             google.maps.event.addDomListener(window, 'load', init_map);
+
                         </script>
                     </div>
                 </div>
@@ -196,7 +196,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js " integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1 " crossorigin="anonymous "></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script>
-        (function () {
+        (function() {
             'use strict'
             if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
                 var msViewportStyle = document.createElement('style')
@@ -204,6 +204,7 @@
                 document.head.appendChild(msViewportStyle)
             }
         }())
+
     </script>
 </body>
 
